Make it work with cmd-click

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 DeSelection
 x when you option click on a piece of selection, it dissappearss
+x figure out how to make it work with cmd-click, since that's what you make new multiple selections with.
 * better name for action?
-* figure out how to make it work with cmd-click, since that's what you make new multiple selections with.
+* figure out why it's crashing PathWhatever
